# cart_lin

./: Cargo.toml  LICENSE  README.md
docs/: links.md  main.md
src/: lib.rs
tests/: cartesian_product.rs  conversion.rs  nalgebra.rs  ndarray.rs
