[package]
name = "cart_lin"
version = "0.2.1"
edition = "2024"
description = "Conversion between cartesian and linear indices"
readme = "README.md"
license  = "MIT OR Apache-2.0"
repository = "https://github.com/StefanMathis/cart_lin.git"

[dependencies]

[dev-dependencies]
nalgebra = "0.32"
ndarray = "0.16"